# cc-test

./: .gitignore  Cargo.toml  README.md  cc-switch.db  run_output.txt  run_output2.txt
.trae/documents/: cc-switch-api-tester.md
src/: config.rs  db_check.rs  main.rs  reporter.rs  tester.rs  types.rs  web.rs
static/: index.html
